cleanups to SqmUtil